Increase azure-eventhubs test coverage
Fixes #6367